kube/sentimail-manual/sentimail/ms-attachment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentimail-ms-attachment
spec:
  selector:
    matchLabels:
      app: sentimail-ms-attachment
  replicas: 1
  template:
    metadata:
      labels:
        app: sentimail-ms-attachment
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: sentimail-ms-attachment
        image: harbor.sentimail.samoth.eu/sentimail/ms-attachment:latest
        resources:
          requests:
            cpu: '10m'
            memory: '64M'
          limits:
            cpu: '1'
            memory: 1024M
