kube/sentimail-manual/sentimail/ms-content.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentimail-dev-ms-content
spec:
  selector:
    matchLabels:
      app: sentimail-dev-ms-content
  replicas: 1
  template:
    metadata:
      labels:
        app: sentimail-dev-ms-content
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: sentimail-dev-ms-content
        image: harbor.sentimail.samoth.eu/sentimail/ms-content:latest
        command: ['python', './main.py']
        resources:
          requests:
            cpu: '10m'
            memory: '64M'
          limits:
            cpu: '1'
            memory: 1024M
