kube/sentimail-manual/sentimail/ms-metadata.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentimail-dev-ms-metadata
spec:
  selector:
    matchLabels:
      app: sentimail-dev-ms-metadata
  replicas: 1
  template:
    metadata:
      labels:
        app: sentimail-dev-ms-metadata
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: sentimail-dev-ms-metadata
        image: harbor.sentimail.samoth.eu/sentimail/ms-metadata:latest
        imagePullPolicy: Always
        command: ['python', './main.py']
        resources:
          requests:
            cpu: '10m'
            memory: '64M'
          limits:
            cpu: '1'
            memory: 1024M
