kube/sentimail-manual/sentimail/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentimail-backend
spec:
  selector:
    matchLabels:
      app: sentimail-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: sentimail-backend
    spec:
      containers:
      - name: sentimail-backend
        image: harbor.sentimail.samoth.eu/sentimail/backend:latest
        command: ['python', '-m', 'gunicorn', 'sentimail.asgi:application', '-k', 'uvicorn.workers.UvicornWorker', '-b', '0.0.0.0:8000']
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: '100m'
            memory: '128M'
          limits:
            cpu: '1'
            memory: 1024M
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: sentimail-backend-service
spec:
  selector:
    app: sentimail-backend
  ports:
  - port: 8000
